--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ flask = "2.2.2"
 flask-migrate = "3.1.0"
 flask-restful = "0.3.9"
 flask-serializer = "0.0.5.1"
-flask-sqlalchemy = "2.5.1"
+flask-sqlalchemy = "*"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
